implement the other 2 write methods and delete methods for ProblemLocalConnection